RESOLVED FIXED 87326
Qt DRT should be able to load external resources
https://bugs.webkit.org/show_bug.cgi?id=87326
Summary Qt DRT should be able to load external resources
Ryosuke Niwa
Reported 2012-05-23 17:16:23 PDT
For the purpose of page loading tests I'm preparing for the bug 84008, we need Qt DRT and WRT to be able to load external resources. i.e. we need to make changes like http://trac.webkit.org/changeset/118231
Attachments
proposed patch (3.96 KB, patch)
2012-06-01 08:29 PDT, Zoltan Horvath
no flags
proposed patch (3.94 KB, patch)
2012-06-06 03:32 PDT, Zoltan Horvath
no flags
Csaba Osztrogonác
Comment 1 2012-05-23 23:28:56 PDT
As far as I remember we have a working patch for it somewhere. Maybe Zoltán you have it. :)
Csaba Osztrogonác
Comment 2 2012-05-29 23:03:00 PDT
Balázs, Zoltán, don't we have a patch for this already?
Zoltan Horvath
Comment 3 2012-06-01 06:11:59 PDT
Assigned to me. I finished the patch, now I'm just testing it with WTR since we have crashes.
Zoltan Horvath
Comment 4 2012-06-01 08:29:33 PDT
Created attachment 145315 [details] proposed patch WTR crashes for URL parameters without this patch also, so that is a separate issue, so I upload the patch for r?.
Zoltan Horvath
Comment 5 2012-06-04 04:26:20 PDT
Comment on attachment 145315 [details] proposed patch Clearing flags on attachment: 145315 Committed r119384: <http://trac.webkit.org/changeset/119384>
Zoltan Horvath
Comment 6 2012-06-04 04:26:32 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7 2012-06-04 05:08:05 PDT
Re-opened since this is blocked by 88227
Zoltan Horvath
Comment 8 2012-06-06 03:32:36 PDT
Created attachment 145981 [details] proposed patch Same as last time. I just need to add an extra condition to make things right! Tests pass to me on my system.
Zoltan Horvath
Comment 9 2012-06-06 04:21:56 PDT
Comment on attachment 145981 [details] proposed patch Clearing flags on attachment: 145981 Committed r119582: <http://trac.webkit.org/changeset/119582>
Zoltan Horvath
Comment 10 2012-06-06 04:22:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.