[Qt] Qt DRT / WTR should be able to load external resources https://bugs.webkit.org/show_bug.cgi?id=87326

Reviewed by Ryosuke Niwa.

Allow external resources to be loaded when the main frame's URL is also an external resource.
This change is analogous to r118231 for Mac port and to r119153 Chromium port.

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::blockRequest):
(WebCore):
(WebCore::isLocalhost):
(WebCore::hostIsUsedBySomeTestsToGenerateError):
(WebCore::FrameLoaderClientQt::dispatchWillSendRequest):

Canonical link: https://commits.webkit.org/106051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119384 268f45cc-cd09-0410-ab3c-d52691b4dbfc